added some more classes to work on. planning to get the npc add command to work by next commit

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=NPCCraft is an Hey0 Mod For Adding Living NPC's to Minecraft
+application.homepage=https://github.com/XAMPP/NPCCraft
+application.title=NPCCraft
+application.vendor=XAMPP
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,16 +26,19 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/NPCCraft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.Minecraft_Mod.jar=I:\\Visual-Studio\\java\\libs\\Minecraft_Mod.jar
 file.reference.minecraft_server.jar=I:\\Visual-Studio\\java\\libs\\minecraft_server.jar
+file.reference.mysql-connector-java-bin.jar=I:\\Visual-Studio\\java\\libs\\mysql-connector-java-bin.jar
 file.reference.XAMPP.Util.Lib.jar=I:\\Visual-Studio\\java\\XAMPP.Util.Lib\\dist\\XAMPP.Util.Lib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.XAMPP.Util.Lib.jar}:\
     ${file.reference.minecraft_server.jar}:\
-    ${file.reference.Minecraft_Mod.jar}
+    ${file.reference.Minecraft_Mod.jar}:\
+    ${file.reference.mysql-connector-java-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
