--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Minecraft_Mod.jar}:\
-    ${file.reference.minecraft_server.jar}:\
-    ${file.reference.mysql-connector-java-bin.jar}
+    ${file.reference.mysql-connector-java-bin.jar}:\
+    ${file.reference.minecraft_server.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
