--- a/install/NPCCraft/NPCCraft.properties
+++ b/install/NPCCraft/NPCCraft.properties
@@ -18,3 +18,6 @@ enableai=true
 enablemodelbuilding=true
 verbrose=true
 debugmode=true
+#Auth
+authkey=00000-00000-00000-00000-00000
+servername=omgtestserver
